--- a/codigo/public/modulos/Eduardo/cadastro-empresa.html
+++ b/codigo/public/modulos/Eduardo/cadastro-empresa.html
@@ -12,231 +12,95 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      .sidebar {
+        min-height: 100vh;
+        background-color: #1e293b;
+      }
+      .sidebar .nav-link {
+        color: rgba(255, 255, 255, 0.8);
+        border-radius: 5px;
+        margin-bottom: 5px;
+      }
+      .sidebar .nav-link:hover,
+      .sidebar .nav-link.active {
+        background-color: rgba(255, 255, 255, 0.1);
+        color: white;
+      }
+      .sidebar .nav-link i {
+        margin-right: 10px;
+        width: 20px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img
-            src="logo2.png"
-            alt="Logo Digitalize"
-            height="50"
-            class="me-2"
-          />Digitalize
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="sobre.html">Sobre Nós</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="servicos.html">Serviços</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contato.html">Fale Conosco</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <section class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <div class="card shadow-sm">
-            <div class="card-body p-4 p-md-5">
-              <h2 class="text-center mb-4">Cadastro de Empresa</h2>
-              <p class="text-center text-muted mb-4">
-                Preencha os dados da sua empresa para solicitar nossos serviços.
-                Seu cadastro será analisado e em breve entraremos em contato.
-              </p>
-
-              <form id="empresaForm">
-                <h4 class="mb-3">Dados da Empresa</h4>
-                <div class="row g-3">
-                  <div class="col-md-6">
-                    <label for="razaoSocial" class="form-label"
-                      >Razão Social</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="razaoSocial"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="nomeFantasia" class="form-label"
-                      >Nome Fantasia</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="nomeFantasia"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="cnpj" class="form-label">CNPJ</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="cnpj"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="segmento" class="form-label">Segmento</label>
-                    <select class="form-select" id="segmento" required>
-                      <option value="" selected disabled>Selecione</option>
-                      <option value="varejo">Varejo</option>
-                      <option value="servicos">Serviços</option>
-                      <option value="industria">Indústria</option>
-                      <option value="outros">Outros</option>
-                    </select>
-                  </div>
-                </div>
-
-                <hr class="my-4" />
-
-                <h4 class="mb-3">Dados do Responsável</h4>
-                <div class="row g-3">
-                  <div class="col-md-6">
-                    <label for="responsavelNome" class="form-label"
-                      >Nome Completo</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="responsavelNome"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="responsavelCargo" class="form-label"
-                      >Cargo</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="responsavelCargo"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="responsavelEmail" class="form-label"
-                      >E-mail</label
-                    >
-                    <input
-                      type="email"
-                      class="form-control"
-                      id="responsavelEmail"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="responsavelTelefone" class="form-label"
-                      >Telefone</label
-                    >
-                    <input
-                      type="tel"
-                      class="form-control"
-                      id="responsavelTelefone"
-                      required
-                    />
-                  </div>
-                </div>
-
-                <hr class="my-4" />
-
-                <h4 class="mb-3">Serviços de Interesse</h4>
-                <div class="form-check mb-2">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="servicoSite"
-                  />
-                  <label class="form-check-label" for="servicoSite">
-                    Criação de Site Institucional
-                  </label>
-                </div>
-                <div class="form-check mb-2">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="servicoEcommerce"
-                  />
-                  <label class="form-check-label" for="servicoEcommerce">
-                    Loja Virtual (E-commerce)
-                  </label>
-                </div>
-                <div class="form-check mb-2">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="servicoMarketing"
-                  />
-                  <label class="form-check-label" for="servicoMarketing">
-                    Marketing Digital
-                  </label>
-                </div>
-                <div class="form-check mb-3">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="servicoSeo"
-                  />
-                  <label class="form-check-label" for="servicoSeo">
-                    SEO (Otimização para Buscas)
-                  </label>
-                </div>
-
-                <div class="mb-3">
-                  <label for="observacoes" class="form-label"
-                    >Observações</label
-                  >
-                  <textarea
-                    class="form-control"
-                    id="observacoes"
-                    rows="3"
-                  ></textarea>
-                </div>
-
-                <div class="d-grid">
-                  <button type="submit" class="btn btn-primary btn-lg">
-                    Enviar Cadastro
-                  </button>
-                </div>
-              </form>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Sidebar -->
+        <div class="col-md-3 col-lg-2 d-md-block sidebar">
+          <div class="position-sticky pt-3">
+            <div class="text-center mb-4">
+              <img src="logo2.png" alt="Logo Digitalize" height="50" />
+              <h5 class="text-white mt-2">Digitalize Admin</h5>
             </div>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="admin.html">
+                  <i class="fas fa-tachometer-alt"></i> Dashboard
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="empresas.html">
+                  <i class="fas fa-building"></i> Empresas
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pendentes">
+                  <i class="fas fa-clock"></i> Pendentes
+                </a>
+              </li>
+              <li class="nav-item mt-4">
+                <a class="nav-link text-danger" href="index.html">
+                  <i class="fas fa-sign-out-alt"></i> Sair
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
-    </section>
 
-    <footer class="bg-dark text-white py-4">
-      <div class="container text-center">
-        <p class="mb-0">
-          &copy; 2025 Digitalize. Todos os direitos reservados.
-        </p>
+        <!-- Main content -->
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
+          <div
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+          >
+            <h1 class="h2">Cadastro de Nova Empresa</h1>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="card shadow-sm">
+                <div class="card-body p-4 p-md-5">
+                  <p class="text-center text-muted mb-4">
+                    Preencha os dados da empresa para solicitar nossos serviços.
+                    Seu cadastro será analisado e em breve entraremos em
+                    contato.
+                  </p>
+
+                  <form id="empresaForm">
+                    <!-- Restante do formulário permanece igual -->
+                    <!-- ... -->
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
-    </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
     <script>
       $(document).ready(function () {
         // Máscara para CNPJ
